--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,11 @@
   src: url('/true-lies.ttf');
 }
 
+html, body, main {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: black;
   color: white;
@@ -25,7 +30,7 @@ a:hover {
 }
 
 a:active {
-  color: 
+
 }
 
 a:visited {
