--- a/public/index.css
+++ b/public/index.css
@@ -47,13 +47,18 @@ h1 {
   font-family: 'True Lies';
 }
 
+header *, nav, main, footer {
+  z-index: 1000;
+}
+
 #shade {
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   position: fixed;
   background: black;
   opacity: .66;
   z-index: -1;
+  -webkit-transform: translateZ(0);
 }
