--- a/views/layout.html
+++ b/views/layout.html
@@ -19,7 +19,7 @@
       {{{yield}}}
     </main>
     <footer>
-    
+      <script src="index.js" type="text/javascript"></script>    
     </footer>
   </body>
 </html>
