--- a/public/index.css
+++ b/public/index.css
@@ -5,7 +5,7 @@
 
 html, body, main {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
@@ -14,6 +14,7 @@ body {
   font-family: Helvetica;
   background-size: cover;
   font-size: 1.5em;
+  background-repeat: no-repeat;
 }
 
 header, nav, main, footer {
@@ -54,8 +55,8 @@ header *, nav, main, footer {
 #shade {
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   position: fixed;
   background: black;
   opacity: .66;
