Fixes image and shade loading-again.

--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
   <body>
     <div id="shade"></div>
     <header>
-      <h1>Infinite Records</h1>
+      <h1>Infinit Records</h1>
     </header>
     <nav>
       <a href="/">Home</a>
