--- a/public/index.css
+++ b/public/index.css
@@ -3,11 +3,6 @@
   src: url('/true-lies.ttf');
 }
 
-html, body, main {
-  width: 100%;
-  /* height: 100%; */
-}
-
 body {
   background-color: black;
   color: white;
@@ -57,7 +52,7 @@ header *, nav, main, footer {
   left: 0;
   right: 0;
   bottom: 0;
-  position: fixed;
+  position: absolute;
   background: black;
   opacity: .66;
   z-index: -1;
