--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,5 @@
 <style>
   body { background-image: url(/home.jpg); }
 </style>
-Home
+
+Infinit Records is an independant music label based out of Portland, Oregon.
