--- a/views/layout.html
+++ b/views/layout.html
@@ -10,9 +10,9 @@
     </header>
     <nav>
       <a href="/">Home</a>
-      <a href="/blog">Blog</a>
-      <a href="/rates">Rates</a>
-      <a href="/gear">Gear</a>
+      <a href="/artist">Artist</a>
+      <a href="/studio">Studio</a>
+      <a href="/store">Store</a>
       <a href="/contact">Contact</a>
     </nav>
     <main>
