--- a/views/contact.html
+++ b/views/contact.html
@@ -2,4 +2,4 @@
   body { background-image: url(/contact.jpg); }
 </style>
 
-<a href="mailto:jahosh@infinitrecords.com">Send us an email.</a>
+For all inquiries, email jahosh@infinitstudio.com.
